--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     // Configuration object
     window.CASL_CONFIG = {
       api: {
-        baseUrl: 'https://tn25108ywk.execute-api.us-east-2.amazonaws.com/prod'
+        baseUrl: 'https://2mez9qoyt6.execute-api.us-east-2.amazonaws.com/prod'
       },
       debug: true
     };
