--- a/index.html
+++ b/index.html
@@ -134,6 +134,6 @@
   </script>
   
   <!-- Main application entry point - MUST be type="module" -->
-  <script type="module" src="CASLapp.js"></script>
+  <script type="module" src="CASLApp.js"></script>
 </body>
 </html>
