--- a/index.html
+++ b/index.html
@@ -1,79 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CASL Key Verification System</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      line-height: 1.6;
-    }
-    .container {
-      max-width: 1000px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-    header {
-      background-color: #f5f5f5;
-      padding: 20px;
-      margin-bottom: 20px;
-      border-radius: 5px;
-    }
-    h1 {
-      margin-top: 0;
-      color: #333;
-    }
-    .app-container {
-      min-height: 600px;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-      padding: 20px;
-      margin-bottom: 20px;
-    }
-    footer {
-      margin-top: 20px;
-      padding-top: 10px;
-      border-top: 1px solid #eee;
-      color: #777;
-      font-size: 14px;
-    }
-    .loading {
-      text-align: center;
-      padding: 50px;
-      font-size: 18px;
-      color: #666;
-    }
-    .error {
-      color: #d9534f;
-      background-color: #f9f2f2;
-      border: 1px solid #ebccd1;
-      padding: 15px;
-      border-radius: 4px;
-      margin-bottom: 20px;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <header>
-      <h1>CASL Key Verification System</h1>
-      <p>A comprehensive guest verification system for short-term rentals</p>
-    </header>
-
-    <div class="app-container">
-      <div id="loading-message" class="loading">Loading CASL Key Verification System...</div>
-      <div id="error-message" class="error" style="display: none;"></div>
-      <casl-app style="display: none;"></casl-app>
-    </div>
-
-    <footer>
-      <p>&copy; 2025 CASL Key Verification System. All rights reserved.</p>
-    </footer>
-  </div>
-
-  <!-- Global configuration and polyfills -->
+<!-- Global configuration and polyfills -->
   <script>
     // Simulate process.env for compatibility
     window.process = {
@@ -136,7 +61,5 @@
     });
   </script>
 
-  <!-- Main application entry point -->
-  <script type="module" src="CASLApp.js"></script>
-</body>
-</html>
+  <!-- Load the webpack bundle instead of ES6 modules -->
+  <script src="casl-bundle.js"></script>
