--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
   
   <!-- The main app element -->
   <casl-app></casl-app>
+  <casl-verification></casl-verification>
   
   <!-- Global configuration -->
   <script>
